--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     sourceSets {
         main { java.srcDirs = ['src/main/java'] }
         test { java.srcDirs = ['src/main/java', 'src/test/java'] }
+        androidTest { java.srcDirs = ['src/main/java', 'src/androidTest/java'] }
     }
 }
 
