--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppThemeNight">
         <activity android:name="edu.sfsu.csc780.chathub.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
