--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.thebluealliance:spectrum:0.7.1'
 
     // Google
     compile 'com.google.android.gms:play-services-auth:10.0.1'
