--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
     }
 }
 
+def dbflow_version = "4.0.0-beta7"
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -45,6 +47,11 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.thebluealliance:spectrum:0.7.1'
+    compile 'com.google.code.gson:gson:2.6.2'
+
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 
     // Google
     compile 'com.google.android.gms:play-services-auth:10.0.1'
@@ -58,7 +65,7 @@ dependencies {
 
     // Testing dependencies
     androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:25.1.1'
+    androidTestCompile 'com.android.support:support-annotations:25.3.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
 
