--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,15 @@ android {
         test { java.srcDirs = ['src/main/java', 'src/test/java'] }
         androidTest { java.srcDirs = ['src/main/java', 'src/androidTest/java'] }
     }
+
 }
 
 def dbflow_version = "4.0.0-beta7"
+
+configurations.all {
+    resolutionStrategy.force 'com.android.support:appcompat-v7:25.1.1'
+    resolutionStrategy.force 'com.android.support:design:25.1.1'
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -68,6 +74,7 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:25.3.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.+"
